--- a/src/styles/sheets/_party-sheet.scss
+++ b/src/styles/sheets/_party-sheet.scss
@@ -4,7 +4,7 @@
 	max-height: calc(100vh - 10%);
 	.border {
 		border: 6px solid transparent;
-		border-image: url(../assets/journal-art/small-border.webp) 100/10px repeat;;
+		border-image: url(../assets/journal-art/small-border.webp) 100/10px repeat;
 	}
 }
 
