--- a/src/styles/sheets/_stronghold.scss
+++ b/src/styles/sheets/_stronghold.scss
@@ -3,6 +3,9 @@
 	flex-direction: column;
 	height: 100%;
 	width: 100%;
+	.bio {
+		padding: 8px;
+	}
 }
 
 .forbidden-lands .stronghold .bio input {
